--- a/examples/config.toml
+++ b/examples/config.toml
@@ -4,12 +4,12 @@
 # - Defaults (applied if missing) and deny policy
 # - Virtual profiles (suffix-based) with overrides
 # - Hiding base models (only expose profile-suffixed models)
-# - Multi-endpoint pool (implicit round-robin)
-# - Local servers without auth and port expansion
+# - Multi-node setups declared as separate servers (one endpoint each)
+# - Local servers without auth
 
 # OpenAI: hide base models; only expose profile-suffixed variants (e.g., gpt-4-fast, o1-preview-high)
 [OpenAI]
-endpoints = ["https://api.openai.com/v1"]
+endpoint = "https://api.openai.com/v1"
 api_key = "sk-proj-..."
 models = ["gpt-4", "o1-preview"]
 defaults = { stream = true, stream_options = { include_usage = true } }
@@ -24,7 +24,7 @@ overrides = { reasoning_effort = "high" }
 
 # Anthropic: standard base + two profiles; base models remain visible
 [Anthropic]
-endpoints = ["https://api.anthropic.com/v1"]
+endpoint = "https://api.anthropic.com/v1"
 api_key = "sk-ant-..."
 models = ["claude-3-5-sonnet-20241022"]
 defaults = { stream = true }
@@ -35,27 +35,33 @@ overrides = { temperature = 0.9, top_p = 0.95 }
 [Anthropic.precise]
 overrides = { temperature = 0.1, top_p = 0.8 }
 
-# GPU-Cluster: multi-endpoint pool (round-robin implied by multiple endpoints)
-["GPU-Cluster"]
-endpoints = [
-  "http://192.168.1.200:8080",
-  "http://192.168.1.201:8080",
-  "http://192.168.1.202:8080"
-]
+# GPU Cluster: declare each node as its own server (single endpoint per server)
+["GPU-Cluster-200"]
+endpoint = "http://192.168.1.200:8080"
 defaults = { stream = true }
 
-["GPU-Cluster".quality]
-overrides = { temperature = 0.8 }
+["GPU-Cluster-201"]
+endpoint = "http://192.168.1.201:8080"
+defaults = { stream = true }
 
-# LocalLLM: local host with port expansion, deny policy, and profiles
-[LocalLLM]
-endpoint = "http://192.168.1.100"
-ports = [8080, 8081]
+["GPU-Cluster-202"]
+endpoint = "http://192.168.1.202:8080"
+defaults = { stream = true }
+
+# Local LLM: single node with deny policy and profiles
+[LocalLLM-8080]
+endpoint = "http://192.168.1.100:8080"
 defaults = { stream = true, top_p = 0.9 }
 deny = ["/top_k", "/repetition_penalty"]
 
-[LocalLLM.coding]
+[LocalLLM-8080.coding]
 overrides = { temperature = 0.2 }
 
-[LocalLLM.creative]
+[LocalLLM-8080.creative]
 overrides = { temperature = 0.8, top_p = 0.95 }
+
+# Another Local LLM node (no profiles here to keep it minimal)
+[LocalLLM-8081]
+endpoint = "http://192.168.1.100:8081"
+defaults = { stream = true, top_p = 0.9 }
+deny = ["/top_k", "/repetition_penalty"]
